2004-10-27  David Mosberger  <davidm@hpl.hp.com>
	    James E Wilson  <wilson@specifixinc.com>

	PR target/13158
	* config/ia64/ia64.c (ia64_expand_epilogue): Set RTX_FRAME_RELATED_P on
	sibcall alloc instruction.
	(process_set): Handle sibcall alloc instruction.

2004-10-26  James E Wilson  <wilson@specifixinc.com>

	PR target/18010
	* emit-rtl.c (emit_copy_of_insn_after): Copy RTX_FRAME_RELATED_P.

2004-02-03  Kazu Hirata  <kazu@cs.umass.edu>

	* config/ia64/ia64.c: Use const0_rtx instead of GEN_INT (0).

2004-04-13  James E Wilson  <wilson@specifixinc.com>

	* c-opt.c (c_common_post_options): If this_input_filename is NULL,
	increment errorcount and return false instead of true.

2004-11-02  Jakub Jelinek  <jakub@redhat.com>

	PR c/18282
	* c-common.c (handle_mode_attribute): Allow mode attribute
	on enums when the mode is integral.

2004-11-24  Jakub Jelinek  <jakub@redhat.com>

	* builtins.c (fold_builtin_object_size): Add
	convert (size_type_node, ret) if ret was not NULL.

2004-11-01  Jakub Jelinek  <jakub@redhat.com>

	* builtin-attrs.def (DEF_ATTR_FOR_INT): Add for 5 and 6.
	(DEF_LIST_INT_INT): Add for 4,0, 4,5, 5,0, 5,6.
	(ATTR_NOTHROW_NONNULL_4, ATTR_NOTHROW_NONNULL_5): Define.
	(ATTR_FORMAT_PRINTF_4_0, ATTR_FORMAT_PRINTF_4_5,
	ATTR_FORMAT_PRINTF_5_0, ATTR_FORMAT_PRINTF_5_6): Define.
	* builtins.c: Include tree-flow.h.
	(expand_builtin_mempcpy, expand_builtin_memmove,
	expand_builtin_strncat): Comment fixes, formatting.
	(expand_builtin_memory_chk, maybe_emit_chk_warning,
	maybe_emit_sprintf_chk_warning, compute_object_offset,
	compute_builtin_object_size, fold_builtin_object_size): New
	functions.
	(unknown, offset_limit_: New variables.
	(init_offset_limit, compute_object_offset, get_base_address,
	addr_object_size, alloc_object_size, pass_through_call,
	compute_builtin_object_size): New.
	(expand_builtin): Handle BUILT_IN_OBJECT_SIZE and BUILT_IN_*_CHK.
	(fold_builtin): Likewise.  Handle BUILT_IN_{,V}{,F}PRINTF
	and BUILT_IN_{,F}PRINTF_UNLOCKED.